# deskd

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml  deskd.conf.example  idea.txt
.claude/agents/: desktop-controller.md
.github/workflows/: ci.yml
deskctl/: Cargo.toml
deskctl/src/: client.rs  commands.rs  main.rs
deskd/: Cargo.toml
deskd/src/: main.rs
deskd/src/atspi/: cache.rs  element.rs  focus.rs  input.rs  mod.rs
deskd/src/config/: mod.rs
deskd/src/db/: mod.rs  schema.rs  tasks.rs  workflows.rs
deskd/src/input/: clipboard.rs  keyboard.rs  mod.rs  mouse.rs
deskd/src/ipc/: mod.rs  protocol.rs  server.rs
deskd/src/wayland/: clipboard.rs  compositor.rs  detection.rs  input.rs  mod.rs  portal.rs  screenshot.rs
deskd/src/wayland/compositor/: gnome.rs  hyprland.rs  kde.rs  mod.rs  sway.rs
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  CONFIGURATION.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  INSTALLATION.md  QUICK_START.md  SECURITY.md
migrations/: 001_initial_schema.sql
mvp/phase-1/: foundation.txt
mvp/phase-2/: atspi-input.txt
mvp/phase-3/: wayland-multi-input.txt
mvp/phase-4/: multi-desktop.txt
mvp/phase-5/: advanced-polish.txt
systemd/: deskd-system.service  deskd.service
