[workspace]
members = ["deskd", "deskctl"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["sebi <sebyx07.pro@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sebyx07/deskd"
homepage = "https://github.com/sebyx07/deskd"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-util = "0.7"

# Database
rusqlite = { version = "0.37", features = ["bundled", "backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.31"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Unix/IPC
nix = { version = "0.29", features = ["socket", "user", "process"] }

# D-Bus for Wayland/AT-SPI
zbus = "5.12"
ashpd = "0.9"

# Configuration
config = "0.14"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
