[package]
name = "deskd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Database
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Unix/IPC
nix = { workspace = true }

# D-Bus for Wayland/AT-SPI
zbus = { workspace = true }
ashpd = { workspace = true }

# Configuration
config = { workspace = true }

# Utils
chrono = { workspace = true }
uuid = { workspace = true }
